--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <option value="picante">Nível Picante</option>
       <option value="extremo">Nível Extremo</option>
     </select>
+    <h3>Reveze as perguntas <br> Se pular a pergunta, beba um shot!</h3>
     <div id="desafio">Clique para iniciar o jogo!</div>
     <button onclick="mostrarDesafio()">Novo Desafio</button>
   </div>
