--- a/desafio/index.html
+++ b/desafio/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
-  <title>Heat Game - Desafios Interativos</title>
+  <script src="script1.js"></script>
+  <title>Desafios Interativos</title>
 </head>
 <body>
   <div class="card">
@@ -17,7 +18,8 @@
     </select>
     <h3>Reveze as perguntas <br> Se pular a pergunta, beba um shot!</h3>
     <div id="desafio">Clique para iniciar o jogo!</div>
-    <button onclick="mostrarDesafio()">Novo Desafio</button>
+    <button class="glow-on-hover" onclick="mostrarDesafio()">Novo Desafio</button>
+    <a href="../inicio/index.html"><button class="glow-on-hover">Voltar</button></a>
   </div>
 
 </body>
