--- a/desafio/index.html
+++ b/desafio/index.html
@@ -19,7 +19,7 @@
     <h3>Reveze as perguntas <br> Se pular a pergunta, beba um shot!</h3>
     <div id="desafio">Clique para iniciar o jogo!</div>
     <button class="glow-on-hover" onclick="mostrarDesafio()">Novo Desafio</button>
-    <a href="../inicio/index.html"><button class="glow-on-hover">Voltar</button></a>
+    <a href="../index.html"><button class="glow-on-hover">Voltar</button></a>
   </div>
 
 </body>
