--- a/roda_intimidade/index.html
+++ b/roda_intimidade/index.html
@@ -24,6 +24,6 @@
     </div>
   </div>
 
-  <a href="../inicio/index.html"><button class="voltar">Voltar</button></a>
+  <a href="../index.html"><button class="voltar">Voltar</button></a>
 </body>
 </html>
