--- a/roleta misteriosa/index.html
+++ b/roleta misteriosa/index.html
@@ -13,6 +13,6 @@
   <div id="wheel">Gire 🍑</div>
   <div id="action"></div> <!-- Onde a frase aparece -->
   <button onclick="spinWheel()">Girar Novamente</button>
-  <a href="../inicio/index.html"><button class="voltar">Voltar</button></a>
+  <a href="../index.html"><button class="voltar">Voltar</button></a>
 </body>
 </html>
