--- a/roleta misteriosa/index.html
+++ b/roleta misteriosa/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>🎡 Roleta Misteriosa</h1>
-  <div id="wheel">Gire 🍑</div>
+  <div id="wheel">Gire!</div>
   <div id="action"></div> <!-- Onde a frase aparece -->
   <button onclick="spinWheel()">Girar Novamente</button>
   <a href="../index.html"><button class="voltar">Voltar</button></a>
